--- a/Code/site/_includes/head.html
+++ b/Code/site/_includes/head.html
@@ -17,6 +17,7 @@
     <title>{{ site.data.settings.title }}</title>
     
     <link rel="stylesheet" href="css/main.scss">
+    <link rel="stylesheet" href="css/navbar.scss">
     
     <script src='/js/jquery-2.1.3.js'></script>
     
