Updating notes file

--- a/Code/site/_sass/navbar.scss
+++ b/Code/site/_sass/navbar.scss
@@ -47,7 +47,7 @@
 }
 
 .cn-button {
-    //font-family: 'title-font', sans-serif;
+    font-family: 'title-font', sans-serif;
     background: none;
     border: none;
     color: white;
