--- a/Code/site/css/main.scss
+++ b/Code/site/css/main.scss
@@ -5,7 +5,7 @@
 
 
 
-// Our variables
+// Variables
 $base-font-family: Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
@@ -47,7 +47,10 @@ $on-laptop:        800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
     "base",
-    "layout",
+    "header",
+    "content",
+    "footer",
+    "post",
     "syntax-highlighting",
     "navbar"
 ;
@@ -57,5 +60,10 @@ $on-laptop:        800px;
 // Fonts
 @font-face {
     font-family: 'title-font';
-    src: url('/assets/fonts/pincoyablack.otf') format("opentype");
+    src: url({{ site.data.layout.titleFont }}) format("opentype");
+}
+
+@font-face {
+    font-family: 'navigation-font';
+    src: url({{ site.data.layout.navigationFont }}) format("opentype");
 }
