--- a/Code/site/_includes/navbar.html
+++ b/Code/site/_includes/navbar.html
@@ -1,5 +1,5 @@
 
-<button class="cn-button" id="cn-button">Nav</button>
+<button class="cn-button" id="cn-button">Menu</button>
 
 <div class="cn-wrapper" id="cn-wrapper">
     <ul>
