Updating some header things. Still working on header and navigation animations...

--- a/Code/site/_includes/footer.html
+++ b/Code/site/_includes/footer.html
@@ -4,7 +4,7 @@
         
         <div class="content-wrap">
             <nav>
-                {% for item in side.data.menu %}
+                {% for item in site.data.menu %}
                     <a href="{{ item.url }}">{{ item.name }}</a>
                 {% endfor %}
             </nav>
