--- a/Code/site/_sass/content.scss
+++ b/Code/site/_sass/content.scss
@@ -6,6 +6,7 @@
     padding-top: 90px;
     height: 2000px; // REMOVE
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .page-heading {
@@ -33,7 +34,7 @@
 }
 
 .home {
-    margin-top: 100px;
+    //margin-top: 100px;
 }
 
 .wrapper{
