--- a/Code/site/_sass/navbar.scss
+++ b/Code/site/_sass/navbar.scss
@@ -6,7 +6,7 @@
  */
 
 .cn-button {
-    font-family: 'navigation-font', sans-serif;
+    //font-family: 'navigation-font', sans-serif;
     background: none;
     border: none;
     color: white;
@@ -16,13 +16,14 @@
     background-color: $brand-color;
     border-radius: 50%;
     //opacity: .9;
-    text-transform: uppercase;
     
     text-align: center;
     position: relative;
     float: right;
-    margin-top: 1.2em;
-    //margin-right: 5em;
+    
+    
+    margin-top: 1.4em;
+    margin-right: 3em;
     margin-bottom: auto;
     
     cursor: pointer;
@@ -56,8 +57,8 @@
     float: right;
     
     // Non-responsive
-    top: -11em; // -11em top, -38em right
-    right: -17em;
+    top: -8.5em; // -11em top, -38em right
+    right: -16.5em;
     
     &:after {
         color: transparent;
@@ -186,15 +187,15 @@
 **/
 
 .opened-nav li:first-child {
-  transform: rotate(-92deg) skew(60deg);
+  transform: rotate(-94deg) skew(60deg);
 }
  
 .opened-nav li:nth-child(2) {
-  transform: rotate(-60deg) skew(60deg);
+  transform: rotate(-62deg) skew(60deg);
 }
  
 .opened-nav  li:nth-child(3) {
-  transform: rotate(-28deg) skew(60deg);
+  transform: rotate(-30deg) skew(60deg);
 }
 
 
