--- a/Code/site/_layouts/default.html
+++ b/Code/site/_layouts/default.html
@@ -9,11 +9,7 @@
         
         {% include header.html %}
 
-        <div class="page-content">
-          <div class="wrapper">
-            {{ content }}
-          </div>
-        </div>
+        {% include content.html %}
 
         {% include footer.html %}
 
