--- a/Code/site/_sass/header.scss
+++ b/Code/site/_sass/header.scss
@@ -3,26 +3,51 @@
  */
 
 .site-header {
-    min-height: 60px;
-    max-height: 90px;
+    min-height: 80px;
+    max-height: 80px;
 
     // Positioning fixed
     position: fixed;
     width: 100%;
     display: inline-block;
-
+    
     // Dark
-    background-image: $header-background;
+    //background-image: $header-background;
+    //background-color: rgba (0,0,0,0.7);
     
     // Shadowing (3rd number is shadow size)
-    box-shadow: inset 0 -10px 10px -10px black ; //$brand-color or white?
+    box-shadow: inset 0 -10px 8px -10px black ; //$brand-color or white?
+    
+    
+    
+    // Imaging
+    &:before {
+        content: ' ';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+//        z-index: 0;
+        opacity: 0.8;
+        background-image: $header-background;
+        background-repeat: no-repeat;
+        background-position: 50% 0;
+        -ms-background-size: cover;
+        -o-background-size: cover;
+        -moz-background-size: cover;
+        -webkit-background-size: cover;
+        background-size: cover;   
+    }
 }
 
 .header-wrapper {
     margin-left: auto;
     margin-right: auto;
+    //margin-top:  15px;
     overflow: visible;
-    max-width: 1080px;
+    max-width: 1150px;
     max-height: 90px;
     margin-right: auto;
     position: relative;
@@ -39,15 +64,15 @@
 
 .page-title {
     font-family: 'title-font', sans-serif; //'title-font', 
-    font-size: 60px;
+    font-size: 55px;
     font-style: italic;
     float: left;
-    //opacity: .9;
+    // opacity: .9;
     margin-top: 5px;
     margin-left: 5px;
     
     position: relative;
-    color: white;
+    color: $grey-color-light;
     text-decoration: none;
 
     
@@ -55,14 +80,14 @@
      * Handling hovers (box shadow animation) 
     **/
     &:hover {
-        color: white;
+        color: $white-color;
         opacity: 1;
     }
     
     &:before {
         content: "";
         position: absolute;
-        width: 330%; //310 (width of the underline)
+        width: 400%; //310 (width of the underline) *fix to relative
         height: 3px;
         bottom: 20px;
         left: 0;
@@ -90,16 +115,16 @@
 .twitter {
     font-family: cursive;
     font-style: italic;
-    font-size: 18px;
-    color: $brand-color;
+    font-size: 16px;
+    color: $offset-color;
     opacity: .9;
-    margin-top: 2.5em;
-    margin-left: -1px;
+    margin-top: 2.65em;
+    margin-left: -3px;
     
     display: inline-block;
     
     &:hover {
-        color: white;
+        color: $offset-highlight;
     }
 }
 
