--- a/Code/site/_includes/navbar.html
+++ b/Code/site/_includes/navbar.html
@@ -2,7 +2,7 @@
 <button class="cn-button" id="cn-button"><span>Menu</span></button>
 
 <div class="cn-wrapper" id="cn-wrapper">
-    <ul>
+    <ul id='nav-options'>
         {% for page in site.pages %}
             {% if page.title %}
                 <li><a href="{{ page.url | prepend: site.baseurl }}"><span class="icon-test">{{ page.title }}</span></a></li>
