--- a/Code/site/_sass/content.scss
+++ b/Code/site/_sass/content.scss
@@ -34,21 +34,94 @@
 }
 
 .home {
-    //margin-top: 100px;
 }
 
 .wrapper{
     //background-color: white;
     height: 100%;
+    margin-top: 10em;
 }
 
 /*************************************************/
-.precontent-image {
-    height: 50%;
+
+.album-image {
+    height: 600px;
+    background-position: 50% 300%; // first is horiz, second is vertical
+
     background-image: $album-image;
-    background-position: bottom;
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
-    //padding: 130px 0 141px;
+}
+
+.banner {
+    font-family: 'dosis';
+    text-align: center;
+    font-size: 12px;
+    width: 25em;
+    height: 2em;
+    position: fixed;
+    background-color: $brand-color;
+    color: $white-color;
+    margin: 0 auto;
+    height: auto;
+    left: -50em;
+    top: 11em;
+    
+    position: relative;
+    
+    border: .25em solid $grey-color-dark;
+    border-radius: 1em;
+    opacity: .9;
+    
+    &:hover {
+        background-color: $brand-highlight;
+        cursor: pointer;
+        opacity: 1.0;
+    }
+    
+    &:before {
+        content: "";
+        display: inline-block; // Vertical centering
+    }
+    
+    h2 {
+        margin-bottom: -.25em;
+        font-weight: 500;
+    }
+    
+    h3, h4, h5 {
+        font-style: italic;
+        margin-bottom: 1em;
+    }
+}
+
+.divider {
+    transform: translateY(-50%);
+    text-align: center;
+    //text-transform: lowercase;
+    width: 5em;
+    height: 5em;
+    position: relative;
+    
+    background-color: $grey-color-dark;
+    color: $white-color;
+    margin: 0 auto;
+    z-index: 1;
+
+    padding: 1em;
+    
+    border-radius: 50%;
+    
+    //box-shadow: 0 0 50px 1px black inset;
+    
+    h2 {
+        vertical-align: middle;
+    }
+}
+
+.album-name {
+    color: white;
+    float: left;
+    
 }
