--- a/Code/site/_sass/header.scss
+++ b/Code/site/_sass/header.scss
@@ -11,16 +11,13 @@
     width: 100%;
     display: inline-block;
     
-    // Dark
-    //background-image: $header-background;
-    //background-color: rgba (0,0,0,0.7);
-    
     // Shadowing (3rd number is shadow size)
     box-shadow: inset 0 -10px 8px -10px black ; //$brand-color or white?
     
+    // Order begins at 5 for header
+    z-index: 5;
     
-    
-    // Imaging
+    // Handles opacity on the background image, without impacting children
     &:before {
         content: ' ';
         display: block;
@@ -29,7 +26,6 @@
         top: 0;
         width: 100%;
         height: 100%;
-//        z-index: 0;
         opacity: 0.8;
         background-image: $header-background;
         background-repeat: no-repeat;
@@ -45,7 +41,6 @@
 .header-wrapper {
     margin-left: auto;
     margin-right: auto;
-    //margin-top:  15px;
     overflow: visible;
     max-width: 1150px;
     max-height: 90px;
@@ -67,7 +62,6 @@
     font-size: 55px;
     font-style: italic;
     float: left;
-    // opacity: .9;
     margin-top: 5px;
     margin-left: 5px;
     
@@ -117,7 +111,6 @@
     font-style: italic;
     font-size: 16px;
     color: $offset-color;
-    opacity: .9;
     margin-top: 2.65em;
     margin-left: -3px;
     
