--- a/Code/site/_sass/navbar.scss
+++ b/Code/site/_sass/navbar.scss
@@ -27,7 +27,7 @@
     margin-bottom: auto;
     
     cursor: pointer;
-    z-index: 11;
+    z-index: 7; // 3rd
     
     &:hover, &:active, &:focus {
         opacity: 1.0;
@@ -47,7 +47,7 @@
 
 .cn-wrapper {
     position: relative;
-    z-index: 10;
+    z-index: 6; // 2nd (under button)
     width: 25em;
     height: 25em;
     border-radius: 50%;
@@ -78,7 +78,7 @@
         top:50%;
         margin-top: -3.1em;
         border-radius: 50%;
-        z-index:10;
+        z-index:6;
     }
 }
 
@@ -143,7 +143,7 @@
     width: 14.5em;
     height: 14.5em;
     border-radius: 50%;
-    background-color: $brand-color;
+//    background-color: $brand-color;
     background: radial-gradient(transparent 35%, $brand-color 35%);
     color: #fff;
     text-align: center;
@@ -274,4 +274,6 @@
 button::-moz-focus-inner {
     border: 0;
 }
+
+
 
