--- a/Code/site/_includes/content.html
+++ b/Code/site/_includes/content.html
@@ -1,29 +1,11 @@
 
 <div class="page-content">
     
-    <div class='album-image'>
-
-        <div class='banner'>
-        
-            <h2>Album of the Week</h2>
-            <h4>1/5/2015</h4>
-            
-        </div>
-        
-        <div class='album-name'>
-        
-            <h1>Koan Sound & Asa</h1>
-            <h3>Sanctuary: EP</h3>
-        
-        </div>
-        
-    </div>
+    {% include imageslider.html %}
 
     <div class='post-image'>
         
         <div class='divider'>
-
-            <h2>Content</h2>
 
         </div>
         
@@ -37,3 +19,5 @@
     </div>
     
 </div>
+
+<script src='/js/album-image.js'></script>
