--- a/Code/site/_includes/content.html
+++ b/Code/site/_includes/content.html
@@ -1,7 +1,7 @@
 
 <div class="page-content">
     
-    {% include imageslider.html %}
+    {% include homepage.html %}
 
     <div class='post-image'>
         
