--- a/Code/site/_sass/soundplayer.scss
+++ b/Code/site/_sass/soundplayer.scss
@@ -1,7 +1,5 @@
-
-.soundplayer-link {
-    background-color: pink;
-    float: left;
-    margin-top: 3em;
-    position: fixed;
+.soundplayer-wrapper {
+    height: 200px;
+    width: 0 auto;
+    overflow: hidden;
 }
