--- a/Code/site/_includes/soundplayer.html
+++ b/Code/site/_includes/soundplayer.html
@@ -1,6 +1,9 @@
+<div class='soundplayer-wrapper'>
 
-<div class='soundplayer-link'>
-
-    <span><a href='#'>Soundplayer</a></span>
-
+    <div class='soundplayer'>
+    
+        <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/118509757&amp;color=3e6990&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+        
+    </div>
+    
 </div>
