--- a/Code/site/_includes/homepage.html
+++ b/Code/site/_includes/homepage.html
@@ -2,7 +2,27 @@
 {% for post in site.posts %}
     {% if post.categories contains 'aotw' %}
 
-        {% include aotw.html %}
+        <a style='display: block' href='{{ post.url }}'>
+
+            <div class='aotw-wrapper' style='background-image: url({{ post.album-image }})'>
+
+                <div class='banner'>
+
+                    <h2>Album of the Week</h2>
+                    <h4>{{ post.date | date: '%B %d, %Y' }}</h4>
+
+                </div>
+
+                <div class='album-name'>
+
+                    <h1>{{ post.artist }}</h1>
+                    <h3>{{ post.album }}</h3>
+
+                </div>
+
+            </div>
+
+        </a>
 
     {% endif %}
 
