Updating filenames for liquid syntax highlighting

--- a/Code/site/_includes/content.liquid
+++ b/Code/site/_includes/content.liquid
@@ -1,7 +1,7 @@
 
 <div class="page-content">
     
-    {% include homepage.html %}
+    {% include homepage.liquid %}
 
     <div class='post-image'>
         
