--- a/Code/site/_includes/header.liquid
+++ b/Code/site/_includes/header.liquid
@@ -15,7 +15,7 @@
         
         <div class='header-right'>
             
-            {% include navbar.html %}
+            {% include navbar.liquid %}
         
         </div>
 
