--- a/Code/site/_layouts/default.liquid
+++ b/Code/site/_layouts/default.liquid
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
-<html>
 
-    {% include head.liquid %} 
-
-    <body>
-        
-        {% include header.liquid %}
-
-        {% include content.liquid %}
-
-        {% include footer.liquid %}
-
-    </body>
-
-</html>
+<!--Just display the content by default now-->
+<section>
+    {{ content }}
+</section>
