--- a/Code/site/_sass/header.scss
+++ b/Code/site/_sass/header.scss
@@ -3,8 +3,8 @@
  */
 
 .site-header {
-    //min-height: 80px;
     max-height: 80px;
+    margin-bottom: 80px;
     top: 0;
 
     // Positioning fixed
