--- a/Code/site/css/main.scss
+++ b/Code/site/css/main.scss
@@ -12,6 +12,7 @@ $base-font-size:        16px;
 $small-font-size:       $base-font-size * 0.875;
 
 $content-width:         1080px;
+// Home page "page limit" found in hompage.liquid
 
 $brand-color:           #3e6990; // old cyan #2a7ae2;
 $dark-color:            #474350; // light grey tinted
