--- a/Code/site/_includes/homepage-content.liquid
+++ b/Code/site/_includes/homepage-content.liquid
@@ -5,69 +5,68 @@
         <a style='display: block' href='{{ post.url }}'>
         
             <div class='post-preview-wrapper' style='background-image: url({{ post.background-image }})'>
-            
-                <div class='banner'>
                 
-                    <h2>{{ post.title }}</h2>
-                    <h4>{{ post.date | date: '%B %d, %Y' }}</h4>
-                    
-                </div>
                 
-                <div class='post-name'>
+                {% if post.categories contains 'aotw' %}
+                
+                    <div class='banner aotw'>
                     
-                    {% if post.categories contains 'aotw' %}
-                    
+                        <h2>{{ post.title }}</h2>
+                        <h4>{{ post.date | date: '%B %d, %Y' }}</h4>
+                        
+                    </div>
+                
+                    <div class='post-name'>
+                        
                         <h1>{{ post.artist }}</h1>
                         <h3>{{ post.album }}</h3>
                         
-                    {% endif %}
+                    </div>
+                
+                {% endif %}
+                
+                {% if post.categories contains 'announcement' %}
+                
+                    <div class='banner announcement'>
                     
-                    {% if post.categories contains 'announcement' %}
-                    
+                        <h2>{{ post.title }}</h2>
+                        <h4>{{ post.date | date: '%B %d, %Y' }}</h4>
+                        
+                    </div>
+                
+                    <div class='post-name'>
+                        
                         <h1>"{{ post.excerpt }}"</h1>
                         
-                    {% endif %}
+                    </div>
                     
-                </div>
+                {% endif %}
+                
+                {% if post.categories contains 'review' %}
+                
+                    <div class='banner review'>
+                    
+                        <h2>{{ post.title }}</h2>
+                        <h4>{{ post.date | date: '%B %d, %Y' }}</h4>
+                        
+                    </div>
+                
+                    <div class='post-name'>
+                        
+                        <h1>{{ post.artist }}</h1>
+                        <h3>{{ post.album }}</h3>
+                        
+                    </div>
+                    
+                {% endif %}
                 
             </div>
             
         </a>
         
+        <div class='divider'></div>
+        
     {% endfor %}
     
 </div>
                 
-                    
-                    
-                    
-    
-    <!--OLD-->
-    
-        <!--TODO - Fix by making more dynamic and extensible-->
-        <!--{% if post.categories contains 'aotw' %}-->
-    
-        <!--    <a style='display: block' href='{{ post.url }}'>-->
-    
-        <!--        <div class='post-preview-wrapper' style='background-image: url({{ post.album-image }})'>-->
-    
-        <!--            <div class='banner'>-->
-    
-        <!--                <h2>Album of the Week</h2>-->
-        <!--                <h4>{{ post.date | date: '%B %d, %Y' }}</h4>-->
-    
-        <!--            </div>-->
-    
-        <!--            <div class='post-name'>-->
-    
-        <!--                <h1>{{ post.artist }}</h1>-->
-        <!--                <h3>{{ post.album }}</h3>-->
-    
-        <!--            </div>-->
-    
-        <!--        </div>-->
-    
-        <!--    </a>-->
-    
-        <!--{% endif %}-->
-        
