--- a/Code/site/_sass/page-content.scss
+++ b/Code/site/_sass/page-content.scss
@@ -2,19 +2,6 @@
  * Page content
  */
 
-.page-content {
-    margin-top: 80px;
-    width: $content-width;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    overflow: hidden;
-    background-image: none;
-    background-color: white;
-    
-    box-shadow: 0px 5px 10px 5px black;
-}
-
 .page-heading {
     font-size: 20px;
 }
@@ -52,4 +39,22 @@
 //    border-top: .25em solid $grey-color-dark;
     //border-bottom: .25em solid $grey-color-dark;
     overflow: hidden;
+}
+
+.fold {
+    transform: translateY(-50%);
+    text-align: center;
+    width: 4em;
+    height: 4em;
+    position: relative;
+    
+    background-color: $offset-color-dark;
+    color: $white-color;
+    margin: 0 auto;
+    z-index: 1;
+
+    padding: 1em;
+    
+    border-radius: 50%;
+    border: .25em solid $grey-color-dark;
 }
